Arregle algunos errores en la version mobile

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
     <h1>Camila Silva</h1>
     <h2>Desarrolladora Frontend</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque placeat, accusantium laudantium suscipit totam laboriosam tempora est numquam dolor, incidunt natus aliquid dolores hic veniam et! Corporis autem cumque sed.</p>
-    <button class="contact button-shadow">Contactame</button>
-    <button class="download button-shadow">Descargar CV</button>
+    <div class="header-btns">     
+      <button class="contact button-shadow">Contactame</button>
+      <button class="download button-shadow">Descargar CV</button>
+    </div>
+
   </header>
 
   <main class="main-section desktop-version">
