Agregue icono en la seccion del footer

--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
     </div>
 
     <span class="footer-section">
-      <p>Creado por Camila Silva</p>
+      <p>Creado por Camila Silva</p> 
+      <img src="./src/img/gato (1).png" alt="">
     </span>
 
   </footer>
