Modifique el parrafo de la seccion Header

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h3>Hola, yo soy</h3>
     <h1>Camila Silva</h1>
     <h2>Desarrolladora Frontend</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque placeat, accusantium laudantium suscipit totam laboriosam tempora est numquam dolor, incidunt natus aliquid dolores hic veniam et! Corporis autem cumque sed.</p>
+    <p>Amante de los gatos aprendiendo a programar para ser desarrolladora fullstack con JavaScript</p>
     <div class="header-btns">     
       <button class="contact button-shadow">Contactame</button>
       <button class="download button-shadow">Descargar CV</button>
